# qt-json-autogen

./: .gitignore  CMakeLists.txt  LICENSE  QasMacros.cmake  QasToolConfig.cmake.in  QasToolMacros.cmake  QasUtils.cmake  README.md
docs/: readme_old.md
examples/: CMakeLists.txt
examples/fakeheader/: CMakeLists.txt  common.h  fake.cpp  main.cpp  real.h
examples/test1/: CMakeLists.txt  classroom.h  main.cpp  testobj.h
examples/test1/Model/: QDspxBase.h  QDspxNote.h  QDspxParam.cpp  QDspxParam.h  QDspxTimeline.h  QDspxTrack.cpp  QDspxTrack.h
examples/test2/: CMakeLists.txt  main.cpp
examples/test2/Model/: DsCoreGlobal.h  QDspxBase.h  QDspxParam.h  QDspxTrack.h
examples/test4/: CMakeLists.txt  main.cpp
examples/test4/Model/: QDspxParam.cpp  QDspxTrack.cpp  QDspxTrack.h
examples/test5/: CMakeLists.txt  classroom.h  foo.h  main.cpp  qas_impl.h
include/: qas.h  qas_basic.h  qas_enum_types.h  qas_json.h  qas_json_types.h  qasglobal.h  qasstream.h  qjsonstream.h
scripts/: QasBatch.cmake
scripts/cmake/: All.cmake
src/: CMakeLists.txt  qasstream.cpp
src/qasjson/: CMakeLists.txt  config.h
tools/: CMakeLists.txt
tools/qasc/: CMakeLists.txt  config.h  generator.cpp  generator.h  main.cpp  nameutil.cpp  nameutil.h  qasc.cpp  qasc.h  res.rc.in
